[package]
name = "kuon-dsd-converter"
version = "0.1.0"
edition = "2021"
description = "DSD (DSF/DFF) to PCM converter — Wasm module for Kuon R&D"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[profile.release]
opt-level = "s"       # optimize for small .wasm size
lto = true
