[package]
name = "kuon-resampler"
version = "0.1.0"
edition = "2021"
description = "High-quality sinc-interpolation sample rate converter — Wasm module for Kuon R&D"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[profile.release]
opt-level = 3        # maximize speed (resampling is CPU-bound)
lto = true
